Additional smaller code fixes